# transcribe-meeting

./: .dockerignore  .gitignore  .token  Diarization-Error-Rate.ipynb  Dockerfile  NeMo.ipynb  README.md  adapting_pretrained_pipeline.ipynb  app.py  docker-compose.yaml  environment.yml  pyannote-training.ipynb  pyproject.toml  requirements.txt  run.sh  streamlit-diarization.py  training_a_model.ipynb  transcribe-meeting.ipynb
config/: diarization.json
docs/: install.md  kafka-integration.md
experimentation/: hello.py  main.py
lab/: airport_audio.lab  audio_2.lab  audio_2_2.lab  audio_DER.lab  hyp_audio_DER.lab
results/: ES2004a_baseline.rttm  ES2004b_baseline.rttm  ES2004c_baseline.rttm  ES2005a_baseline.rttm  IS1009a_baseline.rttm  IS1009a_pyannote_speaker-diarization-3.1.rttm  IS1009b_baseline.rttm  IS1009c_baseline.rttm  IS1009d_baseline.rttm
rttm/: airport_audio.rttm  audio.rttm  audio_2.rttm  audio_DER.rttm
services/: stream_api_whisper_benchmark_speed.py  stream_whisper_benchmark_speed.py
src/app/: app.py
src/audio/: kafka.py
src/cli/: audio_kafka_consumer_debug.py  audio_kafka_consumer_diarization.py  audio_kafka_consumer_whisper.py  audio_kafka_producer.py  audio_kafka_segmentation.py  consumer_debug.py  diarization.py  embeddor.py
src/consumer/: audio.py  base.py  kafka.py  segmentation.py
src/diarization/: embedding.py  segmentation.py
src/observers/: logger.py
src/producer/: audio.py  base.py  diarization.py  kafka.py  segmentation.py
src/schema/: app.py  audio.py  segmentation.py  transcription.py
src/schema/config/: audio.py  consumer.py  diarization.py  producer.py
src/schema/kafka/: audio.py
src/sources/: audio.py  audio_kafka.py
src/transcriber/: whisper.py
static/html/: index.html
static/js/: code.js
tests/integrations/: test_app_transcription.py
(+6 files in other folders)
